# mvia-course-project

./: README.md
backup/mv/: mainwindow.cpp  mainwindow.h
mv/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
work/MVProject/: CMakeLists.txt  MVProject.pro  MVProject.pro.user.b946cc9  MVProject.pro.user.e9b6b01  imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
work/URrobot/c/: 1.cc  2.cc  3.cc  CMakeLists.txt  a.out
work/URrobot/c++/: 1.cc
work/URrobot/c/client/: 3.cc
work/URrobot/c/sever/: 1.cc  a.out
work/URrobot/c/w01/: 1.cc
work/URrobot/c/w03/: 1.cc
work/URrobot/c/w04/: 1.cc
work/URrobot/c/w05/: 1.cc
work/URrobot/python/: 1.py
work/URrobot/qt/robot/: mainwindow.cpp  mainwindow.h  mainwindow.ui
work/guiji/01/: 1.cc  2.cc
work/guiji/02/: 1.cc  CMakeLists.txt
work/guiji/03/: .1.cc.swp  1.cc
work/guiji/04/: 1.cc
work/guiji/05/: 1.cc
work/guiji/11/: 1.cc
work/guiji/huadian/: 1.cc
work/guiji/jisuan/: CMakeLists.txt  jisuan.cc
work/openimage/: imageviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  openimage.pro
work/py work/01/: 1.py
work/test/01/: 1.cc
work/w01/: 1.c
work/w02/: 1.cc  a.out
work/w03/: 1  Makefile
work/w04/: 1.cc
work/w05/: Untitled Document 1
work/w06/: 1.cc
work/w07/: 1.cc
work/w08/: 1.cc
